--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1,3 +1,6 @@
+@import 'branding-colours';
+
+
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 @font-face {
@@ -57,7 +60,7 @@ html {
 }
 #wrapper{
   width: 95%; 
-  border-top: 5px solid #33c2df; 
+  border-top: 5px solid $primary-navy; 
   margin-left: auto; 
   margin-right: auto; 
 }
@@ -69,9 +72,12 @@ body {
   margin-top: 20px;
   font-weight:100;
 }
+
 a {
         background:transparent;
+        text-decoration: underline;
 }
+
 b,strong {
         font-weight:bold;
 }
@@ -83,10 +89,10 @@ body {
         font-size:15px;
 }
 a {
-        color:#33c2df;
+        color:$primary-navy;
 }
 a:hover,a:focus {
-        color:#1b92ab;
+        color:$primary-navy;
 }
 .img-rounded {
         border-radius:0px;
@@ -131,7 +137,7 @@ h5,.h5 {
         color:#999999;
 }
 .text-primary {
-        color:#33c2df;
+        color:$primary-navy;
 }
 a.text-primary:hover {
         color:#1ea5c1;
@@ -162,7 +168,7 @@ a.text-danger:hover {
 }
 .bg-primary {
         color:#fff;
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 a.bg-primary:hover {
         background-color:#1ea5c1;
@@ -368,7 +374,7 @@ select.input-lg {
         border-radius:0px;
 }
 .btn-default {
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .btn-default:hover,.btn-default:focus,.btn-default:active,.btn-default.active,.open .dropdown-toggle.btn-default {
         background-color:#ebebeb;
@@ -378,22 +384,22 @@ select.input-lg {
         border-color:#eeeeee;
 }
 .btn-primary {
-        color:#33c2df;
+        color:$primary-navy;
         background-color:#ffffff;
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.open .dropdown-toggle.btn-primary {
-        color:#33c2df;
+        color:$primary-navy;
         background-color:#ebebeb;
         border-color:#1d9eb8;
 }
 .btn-primary.disabled,.btn-primary[disabled],fieldset[disabled] .btn-primary,.btn-primary.disabled:hover,.btn-primary[disabled]:hover,fieldset[disabled] .btn-primary:hover,.btn-primary.disabled:focus,.btn-primary[disabled]:focus,fieldset[disabled] .btn-primary:focus,.btn-primary.disabled:active,.btn-primary[disabled]:active,fieldset[disabled] .btn-primary:active,.btn-primary.disabled.active,.btn-primary[disabled].active,fieldset[disabled] .btn-primary.active {
         background-color:#ffffff;
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .btn-primary .badge {
         color:#ffffff;
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .btn-success {
         background-color:#42bfae;
@@ -411,12 +417,12 @@ select.input-lg {
         color:#42bfae;
 }
 .btn-info {
-        color:#33c2df;
+        color:$primary-navy;
         background-color:#ffffff;
         border-color:#f2f2f2;
 }
 .btn-info:hover,.btn-info:focus,.btn-info:active,.btn-info.active,.open .dropdown-toggle.btn-info {
-        color:#33c2df;
+        color:$primary-navy;
         background-color:#ebebeb;
         border-color:#d4d4d4;
 }
@@ -426,7 +432,7 @@ select.input-lg {
 }
 .btn-info .badge {
         color:#ffffff;
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .btn-warning {
         background-color:#ffdd00;
@@ -459,11 +465,11 @@ select.input-lg {
         color:#f16522;
 }
 .btn-link {
-        color:#33c2df;
+        color:$primary-navy;
         font-weight:normal;
 }
 .btn-link:hover,.btn-link:focus {
-        color:#1b92ab;
+        color:$primary-navy;
 }
 .btn-link[disabled]:hover,fieldset[disabled] .btn-link:hover,.btn-link[disabled]:focus,fieldset[disabled] .btn-link:focus {
         color:#999999;
@@ -500,21 +506,22 @@ select.input-lg {
 */
 .dropdown-menu {
         font-size:15px;
-        border:1px solid #33c2df;
+        border:1px solid $primary-navy;
         border-radius:0px;
 }
 .dropdown-menu .divider {
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .dropdown-menu>li>a {
         font-weight:normal;
+        text-decoration: none;
 }
 .dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus {
-        color:#33c2df;
+        color:$primary-navy;
         background-color:#ffffff;
 }
 .dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus {
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .dropdown-menu>.disabled>a,.dropdown-menu>.disabled>a:hover,.dropdown-menu>.disabled>a:focus {
         color:#999999;
@@ -578,7 +585,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         color:#999999;
 }
 .nav .open>a,.nav .open>a:hover,.nav .open>a:focus {
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .nav-tabs>li>a {
         border-radius:0px 0px 0 0;
@@ -595,7 +602,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         border-radius:0px;
 }
 .nav-pills>li.active>a,.nav-pills>li.active>a:hover,.nav-pills>li.active>a:focus {
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .nav-tabs-justified>li>a {
         border-radius:0px;
@@ -672,6 +679,10 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         border-color:#ffffff;
 }
 
+.navbar-default a {
+    text-decoration: none;
+}
+
 .navbar-default .navbar-brand {
         color:#000000;
         font-size:22px;
@@ -717,7 +728,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
         background-color:transparent;
-        color:#33c2df;
+        color:$primary-navy;
 }
 
 #main-navbar .dropdown-toggle {
@@ -740,10 +751,10 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
                         color:#000000;
         }
         .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover,.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus {
-                        color:#33c2df;
+                        color:$primary-navy;
         }
         .navbar-default .navbar-nav .open .dropdown-menu>.active>a,.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
-                        color:#33c2df;
+                        color:$primary-navy;
                         background-color:transparent;
         }
 
@@ -760,7 +771,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
 }
 
 .navbar-default .navbar-link:hover {
-        color:#33c2df;
+        color:$primary-navy;
 }
 
 .navbar-inverse .navbar-brand {
@@ -805,13 +816,13 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         border-top-right-radius:0px;
 }
 .pagination>li>a:hover,.pagination>li>span:hover,.pagination>li>a:focus,.pagination>li>span:focus {
-        color:#1b92ab;
+        color:$primary-navy;
         border-color:transparent;
 }
 .pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus {
-        background-color:#33c2df;
-        border-top-color:#33c2df;
-        border-bottom-color:#33c2df;
+        background-color:$primary-navy;
+        border-top-color:$primary-navy;
+        border-bottom-color:$primary-navy;
         border-top-color:#000;
         border-bottom-color:#000;
 }
@@ -861,7 +872,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         background-color:#808080;
 }
 .label-primary {
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .label-primary[href]:hover,.label-primary[href]:focus {
         background-color:#1ea5c1;
@@ -896,7 +907,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         background-color:#999999;
 }
 a.list-group-item.active>.badge,.nav-pills>.active>a>.badge {
-        color:#33c2df;
+        color:$primary-navy;
 }
 .jumbotron p {
         font-size:23px;
@@ -914,7 +925,7 @@ a.list-group-item.active>.badge,.nav-pills>.active>a>.badge {
         border-radius:0px;
 }
 a.thumbnail:hover,a.thumbnail:focus,a.thumbnail.active {
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .alert {
         margin-bottom:21px;
@@ -962,7 +973,7 @@ a.thumbnail:hover,a.thumbnail:focus,a.thumbnail.active {
 .progress-bar {
         font-size:13px;
         line-height:21px;
-        background-color:#33c2df;
+        background-color:$primary-navy;
 }
 .progress-bar-success {
         background-color:#42bfae;
@@ -989,8 +1000,8 @@ a.thumbnail:hover,a.thumbnail:focus,a.thumbnail.active {
         border-bottom-left-radius:0px;
 }
 a.list-group-item.active,a.list-group-item.active:hover,a.list-group-item.active:focus {
-        background-color:#33c2df;
-        border-color:#33c2df;
+        background-color:$primary-navy;
+        border-color:$primary-navy;
 }
 a.list-group-item.active .list-group-item-text,a.list-group-item.active:hover .list-group-item-text,a.list-group-item.active:focus .list-group-item-text {
         color:#e3f7fb;
@@ -1101,17 +1112,17 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
         overflow:hidden;
 }
 .panel-primary {
-        border-color:#33c2df;
+        border-color:$primary-navy;
 }
 .panel-primary>.panel-heading {
-        background-color:#33c2df;
-        border-color:#33c2df;
+        background-color:$primary-navy;
+        border-color:$primary-navy;
 }
 .panel-primary>.panel-heading+.panel-collapse .panel-body {
-        border-top-color:#33c2df;
+        border-top-color:$primary-navy;
 }
 .panel-primary>.panel-footer+.panel-collapse .panel-body {
-        border-bottom-color:#33c2df;
+        border-bottom-color:$primary-navy;
 }
 .panel-success>.panel-heading {
         color:#468847;
