Use custom TT snippet to render specific data

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1234,3 +1234,18 @@ small.search_term {
 
 #reveal_password:checked ~ .reveal_area {
   display: block; }
+
+/* disclosure widget */
+.expandable {
+  display: none; }
+
+.trigger[aria-expanded="true"] + .expandable {
+  display: block; }
+
+/* Person contact details popover */
+.person.contact-details {
+  max-width: 20em;
+  border: 1px solid #036ee9;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
