--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -1,4 +1,7 @@
 [% FILTER collapse %]
+
+[% PROCESS snippets/datum.tt %]
+
 [% IF subset.pages > 1 %]
     [% IF subset.page == subset.pages %]
         <a class="disabled btn btn-default pull-right" href="?page=[% subset.page + 1 %]">&raquo;</a>
@@ -61,27 +64,8 @@
             </td>
             [% FOREACH column IN columns %]
                 [% colid = column.id %]
-                [% value = record.fields.$colid %]
-                <td>
-                [% IF column.type == "rag" %]
-                    <div class="circ-large
-                        [% value %]
-                        ">
-                    </div>
-                [% ELSIF column.type == "string" OR column.type == "curval" OR column.multivalue %]
-                    [% IF value.as_string.length > 50 %]
-                        <div class="more-less">
-                            <div class="more-block">
-                    [% END %]
-                                <p>[% value.html_withlinks %]</p>
-                    [% IF value.as_string.length > 50 %]
-                            </div>
-                        </div>
-                    [% END %]
-                [% ELSE %]
-                    <p>[% value.html %]</p>
-                [% END %]
-                </td>
+                [% value = record.fields.$colid.presentation %]
+                <td>[% render_datum(value, column.multivalue) %]</td>
             [% END %]
         </tr>
         [% END %]
