--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -57,15 +57,13 @@
         <tr>
             <td>
                 [% IF record.parent_id %]<span title="Child record with parent record [% record.parent_id %]">[% record.parent_id %] &#8594;</span>[% END %]
-                <a href="/record/[% record.current_id %]">[% record.current_id %]</a>
+                <a href="/record/[% record.id %]">[% record.id %]</a>
                 [% IF user_can_edit AND NOT session.rewind %]
                     (<a href="/edit/[% record.current_id %]">Edit</a>)
                 [% END %]
             </td>
-            [% FOREACH column IN columns %]
-                [% colid = column.id %]
-                [% value = record.fields.$colid.presentation %]
-                <td>[% render_datum(value, column.multivalue) %]</td>
+            [% FOREACH column IN record.columns %]
+                <td>[% render_datum(column.value, column.is_multivalue) %]</td>
             [% END %]
         </tr>
         [% END %]
