--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -47,7 +47,7 @@
 [% END %]
 
 [% MACRO render_string_datum(string) BLOCK %]
-    [% IF string.text.length > MORE_LESS_TRESHOLD %]
+    [% IF string.html.defined && string.html.length > MORE_LESS_TRESHOLD %]
         [% WRAPPER more_less_block %]
             [% string.html %]
         [% END %]
@@ -57,22 +57,22 @@
 [% END %]
 
 [% MACRO render_rag_datum(rag) BLOCK %]
-    <div class="circ-large">[% rag.value %]</div>
+    <div class="circ-large">[% rag %]</div>
 [% END %]
 
-[% MACRO render_datum(datum, multivalue) BLOCK;
+[% MACRO render_datum(datum) BLOCK;
     SWITCH datum.type;
         CASE 'curval'; 
-            render_curval_datum(datum);
+            render_curval_datum(datum.data);
         CASE 'file';
-            render_file_datum(datum);
+            render_file_datum(datum.data);
         CASE 'person';
-            render_person_datum(datum);
+            render_person_datum(datum.data);
         CASE 'string';
-            render_string_datum(datum);
+            render_string_datum(datum.data);
         CASE 'rag';
-            render_rag_datum(datum);
+            render_rag_datum(datum.data);
         CASE;
-            datum.value;
+            datum.data.value;
     END;
 END %]
