Issue #392: Contact details not operable via keyboard

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1243,9 +1243,15 @@ small.search_term {
   display: block; }
 
 /* Person contact details popover */
-.person.contact-details {
+.person.contact-details.expandable {
   max-width: 20em;
+  word-break: break-all;
   border: 1px solid #036ee9;
   border-radius: 6px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: .5em;
+  margin: .5em;
+  z-index: 5;
+  position: absolute; }
