--- a/sass/_branding-colours.scss
+++ b/sass/_branding-colours.scss
@@ -1,1 +1,7 @@
 $primary-navy: #036ee9;
+
+$rag-undefined  : #a09fa0; // aluminium
+$rag-negative   : #800000; // cayenne
+$rag-average    : #eda400; // cantaloupe
+$rag-positive   : #008400; // clover
+$rag-unexpected : #891e88; // plum
