--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -57,7 +57,7 @@
 [% END %]
 
 [% MACRO render_rag_datum(rag) BLOCK %]
-    <div class="circ-large">[% rag %]</div>
+    <div class="rag [% rag.grade %]">[% rag.grade %]</div>
 [% END %]
 
 [% MACRO render_datum(datum) BLOCK;
