--- a/sass/_branding-colours.scss
+++ b/sass/_branding-colours.scss
@@ -1,7 +1,7 @@
 $primary-navy: #036ee9;
 
 $rag-undefined  : #a09fa0; // aluminium
-$rag-negative   : #800000; // cayenne
-$rag-average    : #eda400; // cantaloupe
-$rag-positive   : #008400; // clover
+$rag-danger     : #b94a48;
+$rag-warning    : #c09853;
+$rag-success    : #468847;
 $rag-unexpected : #891e88; // plum
