--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -28,10 +28,10 @@
 [% END %]
 
 [% MACRO render_person_datum(person) BLOCK %]
-    [% person.text %]
     <button class="btn btn-xs btn-primary trigger" aria-expanded="false">
+        [% person.text | html %]
         <span aria-hidden="true" class="glyphicon glyphicon-info-sign"></span>
-        contact <span class="visually-hidden">details</span>
+        <span class="visually-hidden">contact details</span>
     </button>
     <div class="person contact-details expandable">
     [% FOR detail IN person.details %]
