--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -57,7 +57,17 @@
 [% END %]
 
 [% MACRO render_rag_datum(rag) BLOCK %]
-    <div class="rag [% rag.grade %]">[% rag.grade %]</div>
+    [% grade = rag.grade %]
+    [%
+        rag_symbols = {
+           undefined  => '&#x2753;',
+           danger     => '&#x2713;',
+           warning    => '&#x26a0;',
+           success    => '&#x2713;',
+           unexpected => '&#x2757;'
+        }
+    %]
+    <span class="[% grade %]">[% rag_symbols.$grade %]</span>
 [% END %]
 
 [% MACRO render_datum(datum) BLOCK;
