--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -324,7 +324,8 @@ select.input-lg {
 .btn {
   font-weight: normal;
   font-size: 15px;
-  border-radius: 0px; }
+  border-radius: 0px;
+  cursor: auto; }
 
 .btn-default {
   border-color: #1460aa; }
@@ -1261,20 +1262,28 @@ td.rag {
   text-align: center; }
 
 td.rag span {
+  min-width: 1.5em;
   display: inline-block;
-  font-size: 1.8em; }
+  font-size: 1.8em;
+  padding: 0 0.2em;
+  border-bottom: 0.2em solid #000; }
 
 .rag .undefined {
-  color: #a09fa0; }
+  border-bottom-color: #a09fa0;
+  background-color: rgba(160, 159, 160, 0.3); }
 
 .rag .danger {
-  color: #b94a48; }
+  border-bottom-color: #b94a48;
+  background-color: rgba(185, 74, 72, 0.3); }
 
 .rag .warning {
-  color: #c09853; }
+  border-bottom-color: #c09863;
+  background-color: rgba(192, 152, 99, 0.3); }
 
 .rag .success {
-  color: #468847; }
+  border-bottom-color: #468847;
+  background-color: rgba(70, 136, 71, 0.3); }
 
 .rag .unexpected {
-  color: #891e88; }
+  border-bottom-color: #891e88;
+  background-color: rgba(137, 30, 136, 0.3); }
