--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1383,13 +1383,45 @@ small.search_term {
     position: absolute;
 }
 
+/* RAG legend */
+
+#rag_legend {
+    display: inline-block;
+    border: 1px solid #c3c3c3;
+    padding: .5em;
+}
+
+#rag_legend h2 {
+    font-size: 1.1em;
+    margin: 0;
+    margin-bottom: .5em;
+}
+
+#rag_legend dl {
+    margin: 0;
+    padding: 0;
+}
+
+#rag_legend dt,
+#rag_legend dd {
+    display: inline-block;
+}
+
+#rag_legend dt span {
+    font-size: 1.2em;
+}
+
+#rag_legend dd {
+    padding-right: 1.5em;
+}
+
 /* Column RAG */
 
-td.rag {
+.rag {
     text-align: center;
 }
 
-td.rag span {
+.rag span {
     min-width: 1.5em;
     display: inline-block;
     font-size: 1.8em;
