--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -58,16 +58,7 @@
 
 [% MACRO render_rag_datum(rag) BLOCK %]
     [% grade = rag.grade %]
-    [%
-        rag_symbols = {
-           undefined  => '&#x2753;',
-           danger     => '&#x2717;',
-           warning    => '&#x26a0;',
-           success    => '&#x2713;',
-           unexpected => '&#x2757;'
-        }
-    %]
-    <span class="[% grade %]">[% rag_symbols.$grade %]</span>
+    <span aria-labelledby="rag_[% grade %]_meaning" class="[% grade %]">[% rag_symbols.$grade %]</span>
 [% END %]
 
 [% MACRO render_datum(datum) BLOCK;
