--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1234,3 +1234,11 @@ small.search_term {
 
 #reveal_password:checked ~ .reveal_area {
   display: block; }
+
+/* Data table */
+thead button {
+  border: 1px solid #bbb;
+  background-color: inherit;
+  vertical-align: bottom;
+  margin-left: 0.2em;
+  margin-bottom: 0.2em; }
