--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -37,13 +37,15 @@
                         [% col.name | html_entity %][% IF col.id == sort.id %][% st %][% END %]
                     </a>
                     [% IF col.helptext %]
-                        (<a data-toggle="modal" href="" data-target="#modal_helptext" data-col_id="[% col.id %]" data-col_name="[% col.name | html %]">?</a>)
+                        <button aria-haspopup="true" data-toggle="modal" data-target="#modal_helptext" data-col_id="[% col.id %]" data-col_name="[% col.name | html %]">
+                             <span class="visually-hidden">Need help</span>?
+                        </button>
                     [% END %]
 
                     [% IF col.type == "person" AND user.permission.message AND records.size %]
-                        <a href="" data-toggle="modal" data-target="#modal_sendemail" data-peopcol_id="[% col.id %]">
-                            <img src="/images/envw.png">
-                        </a>
+                        <button aria-haspopup="true" data-toggle="modal" data-target="#modal_sendemail" data-peopcol_id="[% col.id %]">
+                            <span class="visually-hidden">Send e-mail</span>&#x2709;
+                        </button>
                     [% END %]
                 </th>
             [% END %]
