Issue #396: convert sorting control into button, add aria attrs indicating sort order

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1357,7 +1357,11 @@ small.search_term {
 
 /* Data table */
 
-thead button {
+.table th * {
+    color: #000;
+}
+
+.table thead button {
     border: 1px solid #bbb;
     background-color: inherit;
     vertical-align: bottom;
