--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1236,7 +1236,10 @@ small.search_term {
   display: block; }
 
 /* Data table */
-thead button {
+.table th * {
+  color: #000; }
+
+.table thead button {
   border: 1px solid #bbb;
   background-color: inherit;
   vertical-align: bottom;
