--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1366,21 +1366,23 @@ small.search_term {
     display: block; 
 }
 
-
-/* Person contact details popover */
-
-.person.contact-details.expandable {
-    max-width: 25em;
+.expandable {
     word-break: break-all;
     border: 1px solid $primary-navy;
     border-radius: 6px;
     -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     background-color: #fff;
-    padding: .5em;
-    margin: .5em;
     z-index: 5;
     position: absolute;
+}
+
+/* Person contact details popover */
+
+.person.contact-details {
+    max-width: 25em;
+    padding: .5em;
+    margin: .5em;
 }
 
 /* RAG legend */
@@ -1448,17 +1450,36 @@ small.search_term {
 .rag .unexpected {
     border-bottom-color: $rag-unexpected;
     background-color: $rag-unexpected-bg;
+}
 
 /* Data table */
 
-.table th * {
+#data-table th * {
     color: #000;
 }
 
-.table thead button {
+#data-table thead button {
     border: 1px solid #bbb;
     background-color: inherit;
     vertical-align: bottom;
     margin-left: 0.2em;
     margin-bottom: 0.2em;
+}
+
+/* less / more */
+
+.more-less.clipped {
+    height: 60px;
+    overflow: hidden;
+}
+
+.more-less.transparent {
+    color: transparent;
+}
+
+.more-less .column-content {
+    padding: .5em;
+    margin-top: .5em;
+    width: 80%;
+    word-break: break-word;
 }
