--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -34,7 +34,7 @@
     [% END %]
 [% END %]
 <div class="hscroll">
-<table class="table table-striped" id="datatable">
+<table class="table table-striped" id="data-table">
     <thead>
         <tr>
             [% sort = sort.shift %]
@@ -92,7 +92,9 @@
                 [% END %]
             </td>
             [% FOREACH column IN record.columns %]
-                <td class="[% column.type %]">[% render_datum(column) %]</td>
+                [% column_index = loop.index %]
+                [% col_header = columns.${column_index} %]
+                <td class="[% column.type %]">[% render_datum(column, col_header.name) %]</td>
             [% END %]
         </tr>
         [% END %]
@@ -167,31 +169,6 @@
                 $("#datatable").floatThead({
                     zIndex: function($table){
                         return 999;
-                    }
-                });
-                var adjustheight = 60;
-                var moreText = '+ More';
-                var lessText = '- Less';
-                var items = $('.more-less .more-block');
-                var $currentItem;
-                for (var i = 0, j = items.length; i < j; i++) {
-                    $currentItem = $(items[i]);
-
-                    if ($currentItem.height() > adjustheight){
-                        $currentItem.css('height', adjustheight).css('overflow', 'hidden');
-                        $currentItem.parent(".more-less").append
-                            ('<a style="cursor:pointer" class="adjust">' + moreText + '</a>');
-                    }
-                };
-                $(".adjust").click(function() {
-                    if ($(this).prev().css('overflow') == 'hidden')
-                    {
-                        $(this).prev().css('height', 'auto').css('overflow', 'visible');
-                        $(this).text(lessText);
-                    }
-                    else {
-                        $(this).prev().css('height', adjustheight).css('overflow', 'hidden');
-                        $(this).text(moreText);
                     }
                 });
                 if (!FontDetect.isFontLoaded('14px/1 FontAwesome')) {
