--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -1,14 +1,12 @@
 [% MORE_LESS_TRESHOLD = 50 %]
 
 [% BLOCK more_less_block %]
-    <div class="more-less">
-        <div class="more-block">
+    <div class="more-less" data-column="[% header | html %]">
         [% content %]
-        </div>
     </div>
 [% END %]
 
-[% MACRO render_curval_datum(is_multivalue, curval) BLOCK %]
+[% MACRO render_curval_datum(is_multivalue, curval, header) BLOCK %]
     [% IF curval.text.length > MORE_LESS_TRESHOLD %]
         [% WRAPPER more_less_block %]
             [% IF is_multivalue %]
@@ -65,16 +63,16 @@
     <span aria-labelledby="rag_[% grade %]_meaning" class="[% grade %]">[% rag_symbols.$grade %]</span>
 [% END %]
 
-[% MACRO render_datum(datum) BLOCK;
+[% MACRO render_datum(datum, header) BLOCK;
     SWITCH datum.type;
         CASE 'curval'; 
-            render_curval_datum(datum.is_multivalue, datum.data);
+            render_curval_datum(datum.is_multivalue, datum.data, header);
         CASE 'file';
             render_file_datum(datum.data);
         CASE 'person';
             render_person_datum(datum.data);
         CASE 'string';
-            render_string_datum(datum.data);
+            render_string_datum(datum.data, header);
         CASE 'rag';
             render_rag_datum(datum.data);
         CASE;
