--- a/views/layout.tt
+++ b/views/layout.tt
@@ -37,7 +37,7 @@
                 <input type="text" class="form-control" id="description" name="description" value="[% column.description | html_entity %]">
             </div>
             <div class="form-group">
-                <label for="name_short"><span style="font-weight:normal !important">Short name: (<a href="" data-toggle="modal" data-target="#modalhelp_name_short">?</a>)</span></label>
+                <label for="name_short"><span style="font-weight:normal">Short name: (<a href="" data-toggle="modal" data-target="#modalhelp_name_short">what&apos;s this?</a>)</span></label>
                 <input type="text" class="form-control" id="name_short" name="name_short" value="[% column.name_short | html_entity %]">
             </div>
             <div class="form-group">
@@ -98,7 +98,7 @@
                         </select>
                     </div>
                     <div class="col-md-2">
-                        <p>matches (<a href="" data-toggle="modal" data-target="#modalhelp_match">?</a>)</p>
+                        <p>matches (<a href="" data-toggle="modal" data-target="#modalhelp_match">what&apos;s this?</a>)</p>
                     </div>
                     <div class="col-md-5">
                         <div class="form-group">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <hr>
-            <h4>Permissions <small>(<a href="" data-toggle="modal" data-target="#modalhelp_groups">?</a>)</small></h4>
+            <h4>Permissions <small>(<a href="" data-toggle="modal" data-target="#modalhelp_groups">what&apos;s this?</a>)</small></h4>
                 [% IF column.id %]
                     [% IF NOT column.permissions.size %]
                         <p>Access must be granted to this field before anyone (including you) can view and edit data in it.</p>
@@ -313,7 +313,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="force_regex">Require the field value to be in a particular format: (<a href="" data-toggle="modal" data-target="#modalhelp_force_regex">?</a>)</label>
+                    <label for="force_regex">Require the field value to be in a particular format: (<a href="" data-toggle="modal" data-target="#modalhelp_force_regex">what&apos;s this?</a>)</label>
                     <input id="force_regex" class="form-control" type="text" name="force_regex" value="[% column.force_regex | html_entity %]">
                 </div>
             </div>
@@ -350,7 +350,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="code_calc">Calculation: (<a href="" data-toggle="modal" data-target="#helpcalc">?</a>)</label>
+                    <label for="code_calc">Calculation: (<a href="" data-toggle="modal" data-target="#helpcalc">what&apos;s this?</a>)</label>
                     <textarea class="form-control monospace" id="code_calc" name="code_calc" rows="10">[% column.code | html_entity %]</textarea>
                 </div>
                 <div class="form-group">
@@ -388,7 +388,7 @@
                     Lua programming language.
                 </p>
                 <div class="form-group">
-                    <label for="code_rag">Conditions for this RAG status field: (<a href="" data-toggle="modal" data-target="#helpcalc">?</a>)</label>
+                    <label for="code_rag">Conditions for this RAG status field: (<a href="" data-toggle="modal" data-target="#helpcalc">what&apos;s this?</a>)</label>
                     <textarea class="form-control monospace" id="code_rag" name="code_rag" rows="10">[% column.code | html_entity %]</textarea>
                 </div>
                 <div class="form-group">
