--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1448,6 +1448,7 @@ small.search_term {
 .rag .unexpected {
     border-bottom-color: $rag-unexpected;
     background-color: $rag-unexpected-bg;
+}
 
 /* Data table */
 
@@ -1461,4 +1462,9 @@ small.search_term {
     vertical-align: bottom;
     margin-left: 0.2em;
     margin-bottom: 0.2em;
+}
+
+.controls {
+    padding-top: .5em;
+    border-top: 1px solid #ddd;
 }
