Semantically valid permissions list

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1324,3 +1324,7 @@ small.search_term {
 .controls {
   padding-top: .5em;
   border-top: 1px solid #ddd; }
+
+/* manage-fields */
+.manage-fields .permissions ul {
+  list-style-type: none; }
