--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1468,3 +1468,9 @@ small.search_term {
     padding-top: .5em;
     border-top: 1px solid #ddd;
 }
+
+/* manage-fields */
+
+.manage-fields .permissions ul {
+    list-style-type: none;
+}
