Force buttons into buttons when in form

--- a/views/snippets/util.tt
+++ b/views/snippets/util.tt
@@ -1,5 +1,5 @@
 [% MACRO whats_this(ref, text) BLOCK %]
-    <button class="btn btn-xs btn-default" aria-haspopup="true"
+    <button type="button" class="btn btn-xs btn-default" aria-haspopup="true"
         data-toggle="modal" data-target="#[% ref %]">[% text || 'what&apos;s this?' %]
         <span aria-hidden="true" class="glyphicon glyphicon-info-sign"></span>
     </button>
