--- a/views/layout.tt
+++ b/views/layout.tt
@@ -123,8 +123,8 @@
                     [% END %]
 
                     [% IF groups.all.size %]
-                        <button aria-haspopup="true" class="btn btn-default" data-toggle="modal" data-target="#modal_access_control">Configure access</button>
-                        <button aria-haspopup="true" class="btn btn-default" data-toggle="modal" data-target="#modal_approval_control">Configure approval</button>
+                        <button type="button" aria-haspopup="true" class="btn btn-default" data-toggle="modal" data-target="#modal_access_control">Configure access</button>
+                        <button type="button" aria-haspopup="true" class="btn btn-default" data-toggle="modal" data-target="#modal_approval_control">Configure approval</button>
                     [% END %]
 
                     [% IF column.permissions.size %]
